tests/errors/test_38.x
// Char expr greater than one character;

fn main() -> i64 {

    let x: i8 = 'ab';
}